--- a/Projekt5/pom.xml
+++ b/Projekt5/pom.xml
@@ -5,13 +5,13 @@
 	<artifactId>webguidemo</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<properties>
-
+		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 	</properties>
 	<dependencies>
 		<dependency>
 			<groupId>org.jbehave</groupId>
 			<artifactId>jbehave-core</artifactId>
-			<version>4.0-beta-11</version>
+			<version>4.0.5</version>
 		</dependency>
 		<dependency>
 			<groupId>org.jbehave.web</groupId>
@@ -23,5 +23,11 @@
 			<artifactId>selenium-java</artifactId>
 			<version>2.53.0</version>
 		</dependency>
+		<dependency>
+	    	<groupId>org.jbehave</groupId>
+	    	<artifactId>jbehave-maven-plugin</artifactId>
+	    	<version>4.0.5</version>
+	    	<scope>test</scope>
+	    </dependency>
 	</dependencies>
 </project>
